Feat: add Response entity for all controllers.